Tests/ContributeWordPressTests/Helpers/Error/SitesExportDecoderError.swift
import Foundation

internal enum SitesExportDecoderError: String, EquatableError {
  case fileURLsFromDirectory
  case exportDecode
}
